fix hover shade for expanded button

--- a/userScripts/buttons.html
+++ b/userScripts/buttons.html
@@ -72,6 +72,10 @@
     .button-content:hover {
       background-color: #fae2a8; /*f9e3ae*/
     }
+
+    .expanded-content:hover {
+      background-color: #fae2a8;
+    }
   </style>
   
   <!-- Button 1 -->
@@ -98,7 +102,7 @@
     <!-- Expanded Content -->
     <div
       class="expanded-content"
-      style="display: none; padding: 10px; margin: 0px 10px;"
+      style="display: none; padding: 10px 20px;"
     >
       <div
         class="content"
@@ -149,7 +153,7 @@
     <!-- Expanded Content -->
     <div
       class="expanded-content"
-      style="display: none; padding: 10px; margin: 0px 10px;"
+      style="display: none; padding: 10px 20px;"
     >
       <div
         class="content"
@@ -200,7 +204,7 @@
     <!-- Expanded Content -->
     <div
       class="expanded-content"
-      style="display: none; padding: 10px; margin: 0px 10px;"
+      style="display: none; padding: 10px 20px;"
     >
       <div
         class="content"
