--- a/userScripts/buttons.html
+++ b/userScripts/buttons.html
@@ -79,7 +79,8 @@
     class="extension-button"
     style="
       position: relative;
-      width: 650px;
+      width: 95%;
+      max-width: 650px;
       border-radius: 30px;
       background-color: #fff2d0;
       cursor: pointer;
@@ -130,7 +131,8 @@
     class="extension-button"
     style="
       position: relative;
-      width: 650px;
+      width: 95%;
+      max-width: 650px;
       border-radius: 30px;
       background-color: #fff2d0;
       cursor: pointer;
@@ -181,7 +183,8 @@
     class="extension-button"
     style="
       position: relative;
-      width: 650px;
+      width: 95%;
+      max-width: 650px;
       border-radius: 30px;
       background-color: #fff2d0;
       cursor: pointer;
