remove animations to fix the prompt render

--- a/userScripts/buttons.html
+++ b/userScripts/buttons.html
@@ -77,7 +77,7 @@
       background-color: #fae2a8;
     }
 
-    .loading-dots span {
+    .loading-dots {
       opacity: 0.2;
       font-size: 16px;
       transition: opacity 0.5s ease;
@@ -98,11 +98,12 @@
     "
   >
   <button class="button-content" id="button1">
-    <div class="loading-dots" style="display: flex; justify-content: center; align-items: center;">
+    Prompt is generating...
+    <!-- <div class="loading-dots" style="display: flex; justify-content: center; align-items: center;">
       <img src="icons/icons.png" style="width: 20px; height: 20px; opacity: 0.2;">
       <img src="icons/icons.png" style="width: 20px; height: 20px; opacity: 0.2;">
       <img src="icons/icons.png" style="width: 20px; height: 20px; opacity: 0.2;">
-    </div>
+    </div> -->
     <a
       href="#"
       class="expand-link"
@@ -152,11 +153,12 @@
     "
   >
     <button class="button-content" id="button2">
-      <div class="loading-dots" style="display: flex; justify-content: center; align-items: center;">
+      Prompt is generating...
+      <!-- <div class="loading-dots" style="display: flex; justify-content: center; align-items: center;">
         <img src="icons/icons.png" style="width: 20px; height: 20px; opacity: 0.2;">
         <img src="icons/icons.png" style="width: 20px; height: 20px; opacity: 0.2;">
         <img src="icons/icons.png" style="width: 20px; height: 20px; opacity: 0.2;">
-      </div>
+      </div> -->
       <a
         href="#"
         class="expand-link"
@@ -207,11 +209,12 @@
     "
   >
     <button class="button-content" id="button3">
-      <div class="loading-dots" style="display: flex; justify-content: center; align-items: center;">
-        <img src="icons/icons.png" style="width: 20px; height: 20px; opacity: 0.2;">
-        <img src="icons/icons.png" style="width: 20px; height: 20px; opacity: 0.2;">
-        <img src="icons/icons.png" style="width: 20px; height: 20px; opacity: 0.2;">
-      </div>
+      Prompt is generating...
+      <!-- <div class="loading-dots" style="display: flex; justify-content: center; align-items: center;">
+        <img src="${chrome.runtime.getURL('icons/icons.png')}" style="width: 20px; height: 20px; opacity: 0.2;">
+        <img src="${chrome.runtime.getURL('icons/icons.png')}" style="width: 20px; height: 20px; opacity: 0.2;">
+        <img src="${chrome.runtime.getURL('icons/icons.png')}" style="width: 20px; height: 20px; opacity: 0.2;">
+      </div> -->
       <a
         href="#"
         class="expand-link"
